Add: frontend notification of duplicate deck

--- a/Frontend/src/app/components/forms/create-deck-form/create-deck-form.component.html
+++ b/Frontend/src/app/components/forms/create-deck-form/create-deck-form.component.html
@@ -7,7 +7,7 @@
             <input [formControl]="deckName" type="text" id="name" name="name" class="form-input" style="width: 300px;"
                 placeholder="Nyan Cat" required>
             <br>
-            <mat-error *ngIf="deckName.invalid  && fault">{{getErrMessage(deckName)}}</mat-error>
+            <mat-error *ngIf="(deckName.invalid  && fault)|| deckNameFault">{{getErrMessage(deckName)}}</mat-error>
             <br>
         </div>
 
