--- a/Frontend/src/app/components/views/game-setup/game/game.component.scss
+++ b/Frontend/src/app/components/views/game-setup/game/game.component.scss
@@ -52,6 +52,11 @@
     margin: 5px;
 }
 
+.button-text:hover {
+    margin: 5px;
+    background-color: #f0f0f0;
+}
+
 .title-text {
     font-size: 2.2rem;
     justify-content:right;
