--- a/Frontend/src/app/components/views/game-setup/game/game.component.scss
+++ b/Frontend/src/app/components/views/game-setup/game/game.component.scss
@@ -63,3 +63,15 @@
     justify-items: right;
     align-items:end;
 }
+
+.multiple-planets{
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0px;
+    margin-bottom: 20px;
+    }
+  
+    .app-planet{
+     padding: 15px;
+    }
+   
