add: Retrieve card from planet after placed

--- a/Frontend/src/app/components/elements/planet-cards/planet-cards.component.html
+++ b/Frontend/src/app/components/elements/planet-cards/planet-cards.component.html
@@ -9,6 +9,6 @@
         <app-planet  [element]="hidden"></app-planet>
     </div>
     
-    <app-multiple-cards [cards]="cards" [clickable]="false"></app-multiple-cards>
+    <app-multiple-cards [cards]="cards" [onPlanet]="true" [clickable]="true"></app-multiple-cards>
 </div>
 <label class="label"> Me ({{currentUserName}}): {{currentUserPoints}} pts</label>
