add: win pop up

--- a/Frontend/src/app/components/views/game-setup/game/game.component.html
+++ b/Frontend/src/app/components/views/game-setup/game/game.component.html
@@ -14,7 +14,7 @@
         
         <mat-error class="title-text" *ngIf="EnergyFault"> Not enough energy</mat-error>
         <div class="flex">
-            <h4 class="deck-text"><p>Sus energía:</p><p>{{energy}}</p>  </h4>
+            <h4 class="deck-text"><p>Su energía:</p><p>{{energy}}</p>  </h4>
             <app-multiple-cards class="cards" [clickable]="true" [cards]="cards"></app-multiple-cards>
             <div class="grid">
                 
