Add: turn logic complete game connection to backend

--- a/Frontend/src/app/components/elements/planet-cards/planet-cards.component.html
+++ b/Frontend/src/app/components/elements/planet-cards/planet-cards.component.html
@@ -11,4 +11,4 @@
     
     <app-multiple-cards [cards]="cards" [onPlanet]="true" [clickable]="true"></app-multiple-cards>
 </div>
-<label class="label"> Me ({{currentUserName}}): {{currentUserPoints}} pts</label>
+<label class="label"> Yo ({{currentUserName}}): {{currentUserPoints}} pts</label>
