--- a/Frontend/src/app/components/pop-ups/end-game/end-game.component.html
+++ b/Frontend/src/app/components/pop-ups/end-game/end-game.component.html
@@ -2,7 +2,7 @@
             <h2 mat-dialog-title class="title-text">¡Victoria!</h2>
     <div>
         <h4 class="coins-text"><p>+ 4 monedas</p>  </h4>
-        <h4 class="points-text"><p>+ 4 pts</p>  </h4>
+        <h4 class="points-text"><p>+ 4 experiencia</p>  </h4>
         <button type="submit" class="button-text" (click)="close()">Volver al Inicio </button>
     </div>   
        
