Add: turn connections to interface

--- a/Frontend/src/app/components/pop-ups/pending-match/pending-match.component.html
+++ b/Frontend/src/app/components/pop-ups/pending-match/pending-match.component.html
@@ -5,3 +5,4 @@
         <h2 class="title-text">Usted tiene una partida en progreso.</h2>
     </div>   
         <button type="submit" class="button-text" (click)="close()">Volver a la partida </button>
+        <button type="submit" class="button-text" (click)="giveup()">Rendirse </button>
